test/pos/multi-sorts.smt2_
; Uninterpreted Sorts
(declare-sort List 1)


; Constants


; Distinct Constants


; Uninterpreted Functions


; Qualifiers


; Well-formedness constraints


; Horn constraints
(constraint (forall ((x Tree)(v1 Tree)) (=> (and True (= v1 x)) (= v1 x))))
